:fix:wrapped the input tag with a label tag

--- a/index.html
+++ b/index.html
@@ -479,23 +479,25 @@
 
                 <div class="buy__name-area">
                   <form class="name-area-form">
-                    <label class="name-area__label"></label>
-                    <input
-                      class="name-area__input"
-                      type="text"
-                      placeholder="Имя"
-                    />
+                    <label class="name-area__label">
+                      <input
+                        class="name-area__input"
+                        type="text"
+                        placeholder="Имя"
+                      />
+                    </label>
                   </form>
                 </div>
 
                 <div class="buy__number-area">
                   <form class="number-area-form">
-                    <label class="number-area__label"></label>
-                    <input
-                      class="number-area__input"
-                      type="tel"
-                      placeholder="Телефон"
-                    />
+                    <label class="number-area__label">
+                      <input
+                        class="number-area__input"
+                        type="tel"
+                        placeholder="Телефон"
+                      />
+                    </label>
                   </form>
                 </div>
                 <div class="buy-color__text">
